# runtime-estimation

./: .gitignore  README.md
WuLarus_Original/: BlockEdgeFrequencyPass.cpp  BranchHeuristicsInfo.cpp  BranchPredictionInfo.cpp  BranchPredictionPass.cpp  CMakeLists.txt  Makefile  StaticFunctionCost.cpp
experiments/: run_experiment.py
experiments/cpu2017-configs/: cp_gprof.sh  cp_perf.sh  experiment-gprof.cfg  experiment-mca.cfg  experiment-perf.cfg  experiment-time.cfg  experiment-uica.cfg  experiment-wularus.cfg
experiments/experiment_scripts/: cp_mca.sh  cp_time.sh  generate_seqs.py
experiments/results_scripts/: kendall.kmeans_func.result  kendall_coefficient.py
experiments/seqs/: flags.selected.yaml  flags.yaml
passes/: make.sh
passes/EstimateCostPass/: CMakeLists.txt  get_plugin_path.sh  make_test.sh  pass.cc  run.sh
passes/InstrumentationPass/: CMakeLists.txt  bb.txt  fun.txt  make_test.sh  output.txt  pass.cc  run.sh  yaml_output.yaml
passes/InstrumentationPass/papi/: Makefile  papi_instrumentation.cc  papi_instrumentation_v2.cc
passes/InstrumentationPass/tests/: permutation.c  permutation.ll.bb.yaml  permutation.ll.fun.yaml
passes/WuLarus/A1.Branch_prediction/: CMakeLists.txt  branch_heuristics_info.cc  branch_heuristics_info.hh  branch_prediction_info.cc  branch_prediction_info.hh  branch_prediction_pass.cc  branch_prediction_pass.hh
passes/WuLarus/A2.Block_edge_frequency/: CMakeLists.txt  block_edge_frequency_pass.cc  block_edge_frequency_pass.hh
runtime-generalization/: kmeans-test.py  kmeans.py  merge_analysis.py  run_merge.sh
(+27 files in other folders)
